--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/themes": "^3.2.0",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^12.0.5",
     "next": "15.1.6",
     "prettier": "^3.4.2",
     "react": "^19.0.0",
+    "react-calendly": "^4.3.1",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
