--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/themes": "^3.2.0",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^12.0.5",
+    "js-cookie": "^3.0.5",
     "next": "15.1.6",
     "prettier": "^3.4.2",
     "react": "^19.0.0",
