--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.20",
     "framer-motion": "^12.0.5",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "prettier": "^3.4.2",
     "react": "^19.0.0",
